--- a/apps/templates/dashboard/order-form.html
+++ b/apps/templates/dashboard/order-form.html
@@ -71,7 +71,7 @@
           </div>
           <div class="form-group">
             <label>Time</label>
-            <div id="time-slot-list" style="font-size: 0.6rem;text-align: center;white-space:nowrap;display: flex;">
+            <div id="time-slot-list" style="font-size: 0.6rem;text-align: center;white-space:nowrap;display: flex; flex-wrap: wrap;">
               {% for time in form.time_list.value|format_order_time_list %}
               <div
                 class="time-slot-tag d-flex"
@@ -135,10 +135,13 @@
           {% endif %}
           <br>
 
-          <div class="d-flex justify-content-space">
+          <div class="d-flex justify-content-between">
             <div>
               <button onclick="window.location.href = '/dashboard/order/list'" type="button" class="btn">Back</button>
               <button id="btn-submit" type="submit" class="btn btn-primary">Submit</button>
+            </div>
+            <div>
+              <button id="btn-update-price" type="button" class="btn btn-primary" data-order_no="{{form.order_no.value}}">Update Price</button>
             </div>
           </div>
         </form>
@@ -188,6 +191,25 @@
         })
       }
     });
+    $('#btn-update-price').click(function() {
+      console.log('???')
+      const orderNo = $(this).data("order_no")
+      fetch(`/dashboard/order/${orderNo}/update-price`, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          new_price: '0.03'
+        }),
+      }).then(function(res) {
+        if (res.ok) {
+          location.reload()
+        } else {
+          $("#errmsg").css({ display: "block" })
+        }
+      })
+    })
     // debounce
     $('#form').submit(function() {
       $('#btn-submit').prop('disabled', true);
