--- a/apps/templates/dashboard/facility-form.html
+++ b/apps/templates/dashboard/facility-form.html
@@ -98,7 +98,7 @@
       <div class="card-body">
         <form id="form" role="form" method="post" action="" enctype="multipart/form-data">
           <div class="form-group">
-            <label>Name</label>
+            <label>Name (Employ parentheses to distinguish between Chinese and English names.)</label>
             {{ form.name }}
           </div>
           <div>
