--- a/apps/templates/dashboard/order-form.html
+++ b/apps/templates/dashboard/order-form.html
@@ -114,7 +114,7 @@
                   {% for order_status in order_status_selector %}
                   <option
                     value="{{order_status.0}}"
-                    {% if order_status.0 == 'Pending Payment' %}disabled
+                    {% if order_status.0 == 'Pending Payment' or order_status.0 == 'Cancelled' %}disabled
                     {% comment %} if current order status is "Pending Payment", allow directly reject this order {% endcomment %}
                     {% elif current_order_status == 'Pending Payment' and order_status.0 != 'Rejected' %}disabled
                     {% endif %}
