dashboard - order info - user nick name

--- a/apps/templates/dashboard/order-details.html
+++ b/apps/templates/dashboard/order-details.html
@@ -24,6 +24,10 @@
             <p>{{order.order_no}}</p>
           </div>
           <div>
+            <label>Contact Person</label>
+            <p>{{order.user_nick_name}}</p>
+          </div>
+          <div>
             <label>Phone Number</label>
             <p>{{order.phone_number}}</p>
           </div>
