--- a/apps/templates/dashboard/order-form.html
+++ b/apps/templates/dashboard/order-form.html
@@ -56,6 +56,13 @@
               <div id="err-msg-phone-number" class="alert alert-danger" style="display:none;margin-top:10px;padding:6px 20px;font-size:14px;"></div>
             </div>
             <div class="form-group">
+              <label>Contact Person</label>
+              <div class="d-flex">
+                {{ form.user_nick_name }}
+              </div>
+              <div id="err-msg-phone-number" class="alert alert-danger" style="display:none;margin-top:10px;padding:6px 20px;font-size:14px;"></div>
+            </div>
+            <div class="form-group">
               <label>Facility</label>
               <div class="d-flex">
                 {{ form.facility_id }}
