dashboard - lock form - default time picker value

--- a/apps/templates/dashboard/facility-lock-form.html
+++ b/apps/templates/dashboard/facility-lock-form.html
@@ -69,12 +69,14 @@
       format: 'H:i',
       step: 30,
       theme: 'dark',
+      defaultTime: "00:00"
     });
     $('.totimepicker').datetimepicker({
       datepicker: false,
       format: 'H:i',
       step: 30,
       theme: 'dark',
+      defaultTime: "23:30"
     });
     $('.fromdatepicker').datetimepicker({
       timepicker: false,
