--- a/apps/templates/dashboard/price-form.html
+++ b/apps/templates/dashboard/price-form.html
@@ -34,11 +34,11 @@
           </div>
           <div class="form-group">
             <label>Normal Hourly Price</label>
-            {{ form.normal_hourly_price }}
+            {% widthratio price.normal_hourly_price 2 1 %}
           </div>
           <div class="form-group">
             <label>Peek Hourly Price</label>
-            {{ form.peek_hourly_price }}
+            {% widthratio price.peek_hourly_price 2 1 %}
           </div>
           <div class="form-group">
             <label>Peek Time</label>
